--- a/webDesign/webDesign.css
+++ b/webDesign/webDesign.css
@@ -36,6 +36,13 @@ header {
     font-size: 50px;
 }
 
+.credits {
+    color: #a50034;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 19px;
+}
+
 .subtitle {
     color: #a50034;
     text-align: center;
