--- a/webDesign/register.css
+++ b/webDesign/register.css
@@ -59,3 +59,10 @@ form {
     
   }
 
+footer{
+    text-align: center;
+    color:#666;
+    font-size: 14px;
+    margin-top: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
