--- a/webDesign/webDesign.css
+++ b/webDesign/webDesign.css
@@ -40,7 +40,7 @@ header {
     color: #a50034;
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 19px;
+    font-size: 17px;
 }
 
 .subtitle {
@@ -79,3 +79,10 @@ body {
     padding: 10px;
 }
 
+footer{
+    text-align: center;
+    color:#666;
+    font-size: 14px;
+    margin-top: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
