--- a/webDesign/webDesign.css
+++ b/webDesign/webDesign.css
@@ -36,6 +36,13 @@ header {
     font-size: 50px;
 }
 
+.leaderboardTitle {
+    color: #a50034;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 46px;
+}
+
 
 .instructions {
     color: #a50034;
